2004-04-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-add-w3m-initial-frames): Get the correct value
	for the newly created frame in Emacs 19.

	* w3m.el (w3m-about-retrieve): Load base64 for Emacs 19.
	(w3m-minor-mode-command-alist): Add w3m-print-this-url.

	* w3m-bitmap.el (w3m-bitmap-image-insert): Don't put the evaporate
	property on empty overlays (revert 2004-04-07 change).

2004-04-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-texfaq.el: Rewrite.

2004-04-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi-mytown.el
	(shimbun-asahi-mytown-prepare-article): New function.
	(shimbun-make-contents): Use it to remove a subject line.

2004-04-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.3.90.
	(w3m-relationship-estimate-rules): Declare as a variable.

	* w3m-e22.el: Removed.

	* w3m-link-numbering.el: Removed.

2004-04-19  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-input-coding-system): Use `w3m-output-coding-system'
	as its default value for w3m-m17n and w3mmee.
	(w3m-halfdump-command-arguments): Use "-I" option to disable
	automatic-detection of coding systems for w3m-m17n and w3mmee.

2004-04-16  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-meta-refresh-content-regexp): Allow quoted string as url.
	(w3m-meta-content-refresh-regexp): Ditto.
	(w3m-check-refresh-attribute): Decode entities.

2004-04-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add the
	borderless group.  There are wonderful pictures, so I strongly
	recommend using asahi-html, not asahi. :)

2004-04-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-link-numbering.el (w3m-link-numbering): Quit when links have
	already been numbered.

2004-04-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-link-numbering.el (w3m-link-numbering-mode): Delete all
	overlays that display link numbers, when deactivating.

2004-04-14  Katsumi Yamaoka  <yamaoka@jpl.org>